HelloUltraviolet/Fixtures/RejectedSource/Statements/ExpressionStatementsDiagnostic/Source/Main.uv
//! Rejected statement specimen for expression statement diagnostic coverage.

public procedure expressionStatementsDiagnosticReference() -> i32 {
    missing_value
    return 0
}
